kubernetes/k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: alimiyn/frontend:latest
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-serv
spec:
  selector:
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 8080
      targetPort: 8080
