kubernetes/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
      - name: post
        image: alimiyn/post:latest
---
apiVersion: v1
kind: Service
metadata:
  name: post-serv
spec:
  type: NodePort
  selector:
    app: post
  ports:
  - name: post
    protocol: TCP
    port: 4000
    targetPort: 4000
