kubernetes/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: post.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: post-serv
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-serv
                port:
                  number: 4002
          - path: /posts/?(.*)/comments
            pathType: ImplementationSpecific
            backend:
              service:
                name: comment-serv
                port:
                  number: 4001
          - path: /app
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-serv
                port:
                  number: 8080
